css/style.scss
/* ... */
.search-hr {
	width: 700px;
	border-color: $light-medium;
}

.error {
	.error-text {
		margin-top: 30px;

		a {
			color: $light-blue;
		}
	}

	.links {
		font-size: 1em;
	}
}

.footer {
	width: 100%;
	margin-left: 0%;

	.fa-heart {
		color: $red;
	}

	@media (min-width: $screen-sm-min) {
		width: 90%;
		margin-left: 5%;
	}

	@media (min-width: $screen-md-min) {
		width: 80%;
		margin-left: 10%;
	}

	@media (min-width: $screen-lg-min) {
		width: 70%;
		margin-left: 15%;
	}

	div {
		color: $light-medium;
		text-align: center;
		margin-top: 20px;
		margin-bottom: 20px;
	}
}

.btn-categories {
	background-color: $light-blue;
	border-color: $light-blue;
	color: $white;
	&:hover {
		background-color: $dark-blue;
		border-color: $dark-blue;
		color: $white;
	}
	&:active {
		background-color: $dark-blue;
		border-color: $dark-blue;
		color: $white;
	}
	&:focus {
		background-color: $dark-blue;
		border-color: $dark-blue;
		color: $white;
	}
}

.dropdown-menu {
	background-color: $light-blue;
	color: $white;
	> li > a {
		background-color: $light-blue;
		color: $white;
		&:hover {
			background-color: $dark-blue;
			color: $white;
		}
	}
}

